WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
259449
REGRESSION(
263118@main
): [GTK] Web inspector does not paint reliably
https://bugs.webkit.org/show_bug.cgi?id=259449
Summary
REGRESSION(263118@main): [GTK] Web inspector does not paint reliably
Michael Catanzaro
Reported
2023-07-24 10:39:59 PDT
The web inspector no longer paints itself reliably. See attached screenshots demonstrating different rendering errors. Often the entire inspector disappears, but I haven't managed to get a screenshot showing this yet. It seems to be fine in 2.40.3, so I bet it's possible to bisect it. I will find out.
Attachments
Screenshot one
(450.84 KB, image/png)
2023-07-24 10:41 PDT
,
Michael Catanzaro
no flags
Details
Screenshot two
(142.39 KB, image/png)
2023-07-24 10:42 PDT
,
Michael Catanzaro
no flags
Details
Screenshot three
(137.65 KB, image/png)
2023-07-24 10:43 PDT
,
Michael Catanzaro
no flags
Details
Screenshot four
(175.86 KB, image/png)
2023-07-24 10:45 PDT
,
Michael Catanzaro
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Michael Catanzaro
Comment 1
2023-07-24 10:41:25 PDT
Created
attachment 467096
[details]
Screenshot one
Michael Catanzaro
Comment 2
2023-07-24 10:42:10 PDT
Created
attachment 467097
[details]
Screenshot two
Michael Catanzaro
Comment 3
2023-07-24 10:43:32 PDT
Created
attachment 467098
[details]
Screenshot three Right after I gave up on trying to get a screenshot of the entire inspector disappearing, it happened. Here.
Michael Catanzaro
Comment 4
2023-07-24 10:45:04 PDT
Created
attachment 467099
[details]
Screenshot four When the web inspector disappears, moving the mouse over the inspector causes regions close to the mouse pointer to draw.
Michael Catanzaro
Comment 5
2023-07-24 11:14:34 PDT
(In reply to Michael Catanzaro from
comment #0
)
> It seems to be fine in 2.40.3, so I bet it's possible to bisect it. I will > find out.
Unfortunately I couldn't find a consistent reproducer. Cannot bisect it unless we can find a way to trigger the bug reliably. :/
two
Comment 6
2023-07-24 15:07:42 PDT
1. open epiphany side by side with another window 2. open web inspector 3. move another window to cover epiphany 4. switch to epiphany with alt+esc 5. move mouse pointer into the web inspector
Michael Catanzaro
Comment 7
2023-07-24 15:32:34 PDT
Thank you! Getting to step 3 is normally (but not always) sufficient for me to reproduce. Still, the bug happens often enough with these steps that I should be able to bisect it.
Michael Catanzaro
Comment 8
2023-07-25 13:23:42 PDT
I tried bisecting this but failed; I must have marked a bad commit as good by mistake. Will try again soon.
Michael Catanzaro
Comment 9
2023-07-26 17:21:34 PDT
I tried again. I'm not quite done yet, but I'm pretty sure I'm going to end on
263118@main
"[CoordinatedGraphics] Simplify drawing area resize implementation"
Michael Catanzaro
Comment 10
2023-07-26 18:59:23 PDT
(In reply to Michael Catanzaro from
comment #9
)
> I tried again. I'm not quite done yet, but I'm pretty sure I'm going to end > on
263118@main
"[CoordinatedGraphics] Simplify drawing area resize > implementation"
Confirmed. This is the first bad commit.
Carlos Garcia Campos
Comment 11
2023-08-01 09:48:36 PDT
The problem is that we are discarding the backing store in the UI process when the web view is no longer in the active window, and not requesting a repaint when the web view is redraw. So, we switch to a different window, 2 seconds later the backing store is discarded, and web view is redraw because another window is moving on top, but we don't have an image to render in the UI process anymore. This indeed regressed in
263118@main
, we were notifying the web process about the backing store change when discarded and requesting a repaint on a redraw. We should do the same now, but it can be simpler now. This happens with the inspector because the inspector view doesn't follow the hardware accelerated setting, and this is a non-accelerated compositing bug. I think we should make sure the inspector is accelerated too when policy is always. I'll submit a different bug for that.
Carlos Garcia Campos
Comment 12
2023-08-01 09:58:58 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/16275
EWS
Comment 13
2023-08-02 07:15:50 PDT
Committed
266511@main
(184eb796664e): <
https://commits.webkit.org/266511@main
> Reviewed commits have been landed. Closing PR #16275 and removing active labels.
Radar WebKit Bug Importer
Comment 14
2023-08-02 07:16:21 PDT
<
rdar://problem/113267570
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug